# network-science-basic

./: .gitignore  CMakeLists.txt  README.md  WSSmallWorld.csv  centrality.cpp  centrality.h  data.txt  dij.cpp  function.cpp  function.h  graph.cpp  graph.h  main.cpp  network_model.cpp  network_model.h  ring.csv  ringNearestNeighbor.csv  smallWorld.cpp  test.py  topologyProperties.cpp  topologyProperties.h  topology_properties.cpp  utils.cpp  utils.h
data/: bef.csv  closeness.txt  edge.txt  kite.csv  kite.txt  test.csv
